--- a/Project.toml
+++ b/Project.toml
@@ -4,9 +4,9 @@ authors = ["Sergio Sánchez Ramírez <sergio.sanchez.ramirez@bsc.es>"]
 version = "0.1.0"
 
 [deps]
-AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+Tensors = "a57d67a0-4683-47ff-be60-6114e830558b"
 
 [compat]
 julia = "1.8"
