Trigger CI workflow on change

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -8,11 +8,13 @@ on:
       - '**.toml'
       - '**.jl'
       - 'docs/*'
+      - '.github/workflows/CI.yml'
   pull_request:
     paths:
       - '**.toml'
       - '**.jl'
       - 'docs/*'
+      - '.github/workflows/CI.yml'
 concurrency:
   # Skip intermediate builds: always.
   # Cancel intermediate builds: only if it is a pull request build.
