--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -54,6 +54,7 @@ jobs:
           using Pkg
           pkg"registry add https://github.com/bsc-quantic/Registry"
           pkg"registry add General"
+        shell: julia {0}
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
