--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 [deps]
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
 Tensors = "a57d67a0-4683-47ff-be60-6114e830558b"
 
 [compat]
