--- a/Project.toml
+++ b/Project.toml
@@ -6,8 +6,16 @@ version = "0.1.0"
 [deps]
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+GraphMakie = "1ecd5474-83a3-4783-bb4f-06765db800d2"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
+NetworkLayout = "46757867-2c16-5918-afeb-47bfcb05e46a"
+Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 Tensors = "a57d67a0-4683-47ff-be60-6114e830558b"
 
 [compat]
 julia = "1.8"
+
+[extensions]
+MakieExt = "Makie"
