--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,15 @@ Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 Tensors = "a57d67a0-4683-47ff-be60-6114e830558b"
 
 [compat]
+Combinatorics = "1.0"
+DataStructures = "0.18"
+GraphMakie = ">=0.5, <1"
+Graphs = "1.6"
+Makie = ">=0.19, <1"
+Memoize = "0.4"
+NetworkLayout = ">=0.4, <1"
+Requires = "1.3"
+Tensors = "0.1"
 julia = "1.8"
 
 [extensions]
