--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,12 @@ NetworkLayout = "46757867-2c16-5918-afeb-47bfcb05e46a"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 Tensors = "a57d67a0-4683-47ff-be60-6114e830558b"
 
+[weakdeps]
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+
+[extensions]
+MakieExt = "Makie"
+
 [compat]
 Combinatorics = "1.0"
 DataStructures = "0.18"
@@ -25,6 +31,3 @@ NetworkLayout = ">=0.4, <1"
 Requires = "1.3"
 Tensors = "0.1"
 julia = "1.8"
-
-[extensions]
-MakieExt = "Makie"
