Trigger "Register Package" workflow on `Project.toml` modification

--- a/.github/workflows/Register-Package.yml
+++ b/.github/workflows/Register-Package.yml
@@ -1,5 +1,10 @@
 name: Register Package
 on:
+  push:
+    branches:
+      - "master"
+    paths:
+      - "Project.toml"
   workflow_dispatch:
 jobs:
   register:
