Fix token of "Register Package" workflow

--- a/.github/workflows/Register-Package.yml
+++ b/.github/workflows/Register-Package.yml
@@ -16,4 +16,4 @@ jobs:
         with:
           registry: https://github.com/bsc-quantic/Registry
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.REGISTRY_TOKEN }}
