--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Sergio Sánchez Ramírez <sergio.sanchez.ramirez@bsc.es>"]
 version = "0.1.1"
 
 [deps]
+ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 GraphMakie = "1ecd5474-83a3-4783-bb4f-06765db800d2"
@@ -14,11 +15,13 @@ NetworkLayout = "46757867-2c16-5918-afeb-47bfcb05e46a"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 Tensors = "a57d67a0-4683-47ff-be60-6114e830558b"
 
+[extensions]
+EinExprsChainRulesCoreExt = "ChainRulesCore"
+EinExprsMakieExt = "Makie"
+
 [weakdeps]
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
-
-[extensions]
-EinExprsMakieExt = "Makie"
+ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 
 [compat]
 Combinatorics = "1.0"
