--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -50,7 +50,7 @@ jobs:
           using Pkg
           pkg"registry add https://github.com/bsc-quantic/Registry"
           pkg"registry add General"
-        shell: julia {0}
+        shell: julia --color=yes {0}
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
@@ -72,6 +72,7 @@ jobs:
           using Pkg
           pkg"registry add https://github.com/bsc-quantic/Registry"
           pkg"registry add General"
+        shell: julia --color=yes {0}
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-docdeploy@v1
         env:
