--- a/.github/workflows/CompatHelper.yml
+++ b/.github/workflows/CompatHelper.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Run CompatHelper
         run: |
           import CompatHelper
-          CompatHelper.main()
+          CompatHelper.main(; use_existing_registries = true)
         shell: julia --color=yes {0}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
