--- a/Project.toml
+++ b/Project.toml
@@ -15,22 +15,25 @@ NetworkLayout = "46757867-2c16-5918-afeb-47bfcb05e46a"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 Tensors = "a57d67a0-4683-47ff-be60-6114e830558b"
 
+[weakdeps]
+ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
+FiniteDifferences = "26cc04aa-876d-5657-8c51-4c34ba976000"
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+
 [extensions]
 EinExprsChainRulesCoreExt = "ChainRulesCore"
+EinExprsFiniteDifferencesExt = "FiniteDifferences"
 EinExprsMakieExt = "Makie"
-
-[weakdeps]
-Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
-ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 
 [compat]
 Combinatorics = "1.0"
 DataStructures = ">=0.18,<1"
+FiniteDifferences = "0.12"
 GraphMakie = ">=0.5,<1"
 Graphs = "1.6"
 Makie = ">=0.19,<1"
 Memoize = "0.4"
 NetworkLayout = ">=0.4,<1"
 Requires = "1.3"
-Tensors = "0.1.3"
+Tensors = "0.1.5"
 julia = "1.8"
