--- a/Project.toml
+++ b/Project.toml
@@ -4,8 +4,10 @@ authors = ["Sergio Sánchez Ramírez <sergio.sanchez.ramirez@bsc.es>"]
 version = "0.1.1"
 
 [deps]
+ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+FiniteDifferences = "26cc04aa-876d-5657-8c51-4c34ba976000"
 GraphMakie = "1ecd5474-83a3-4783-bb4f-06765db800d2"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
@@ -15,19 +17,24 @@ Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 Tensors = "a57d67a0-4683-47ff-be60-6114e830558b"
 
 [weakdeps]
+ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
+FiniteDifferences = "26cc04aa-876d-5657-8c51-4c34ba976000"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 
 [extensions]
+EinExprsChainRulesCoreExt = "ChainRulesCore"
+EinExprsFiniteDifferencesExt = "FiniteDifferences"
 EinExprsMakieExt = "Makie"
 
 [compat]
 Combinatorics = "1.0"
 DataStructures = ">=0.18,<1"
+FiniteDifferences = "0.12"
 GraphMakie = ">=0.5,<1"
 Graphs = "1.6"
 Makie = ">=0.19,<1"
 Memoize = "0.4"
 NetworkLayout = ">=0.4,<1"
 Requires = "1.3"
-Tensors = "0.1.3"
+Tensors = "0.1.7"
 julia = "1.8"
