CompatHelper: add new compat entry for ChainRulesCore at version 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -27,6 +27,7 @@ EinExprsFiniteDifferencesExt = "FiniteDifferences"
 EinExprsMakieExt = "Makie"
 
 [compat]
+ChainRulesCore = "1"
 Combinatorics = "1.0"
 DataStructures = ">=0.18,<1"
 FiniteDifferences = "0.12"
