--- a/Project.toml
+++ b/Project.toml
@@ -33,7 +33,7 @@ DataStructures = ">=0.18,<1"
 FiniteDifferences = "0.12"
 GraphMakie = ">=0.5,<1"
 Graphs = "1.6"
-Makie = ">=0.19,<1"
+Makie = "0.19.0 - 0.19.6"
 Memoize = "0.4"
 NetworkLayout = ">=0.4,<1"
 Requires = "1.3"
