--- a/Project.toml
+++ b/Project.toml
@@ -29,13 +29,13 @@ EinExprsMakieExt = "Makie"
 [compat]
 ChainRulesCore = "1"
 Combinatorics = "1.0"
-DataStructures = ">=0.18,<1"
+DataStructures = "0.18"
 FiniteDifferences = "0.12"
-GraphMakie = ">=0.5,<1"
+GraphMakie = "0.5"
 Graphs = "1.6"
 Makie = "0.19.0 - 0.19.6"
 Memoize = "0.4"
-NetworkLayout = ">=0.4,<1"
+NetworkLayout = "0.4"
 Requires = "1.3"
 Tensors = "0.1.12"
 julia = "1.8"
