CompatHelper: bump compat for Makie to 0.19, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -33,7 +33,7 @@ DataStructures = "0.18"
 FiniteDifferences = "0.12"
 GraphMakie = "0.5"
 Graphs = "1.6"
-Makie = "0.19.0 - 0.19.6"
+Makie = "0.19.0 - 0.19.6, 0.19"
 Memoize = "0.4"
 NetworkLayout = "0.4"
 Requires = "1.3"
