--- a/.github/workflows/Documenter.yml
+++ b/.github/workflows/Documenter.yml
@@ -25,6 +25,8 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - uses: actions/checkout@v3
+        with:
+          lfs: true
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Add Julia registries
