--- a/.github/workflows/Documenter.yml
+++ b/.github/workflows/Documenter.yml
@@ -1,11 +1,9 @@
 name: Documenter
 on:
   push:
-    tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
-    branches:
-      - "master"
-
+    branches: [master]
+    tags: [v*]
+  pull_request:
   workflow_dispatch:
 
 permissions:
@@ -20,15 +18,10 @@ concurrency:
 jobs:
   Documenter:
     runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - uses: actions/checkout@v3
         with:
           lfs: true
-      - name: Setup Pages
-        uses: actions/configure-pages@v2
       - name: Add Julia registries
         run: |
           using Pkg
@@ -36,14 +29,6 @@ jobs:
         shell: julia {0}
       - name: Build package
         uses: julia-actions/julia-buildpkg@latest
-      - name: Generate documentation
-        run: julia --color=yes docs/make.jl
+      - uses: julia-actions/julia-docdeploy@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Upload GitHub Pages artifact
-        uses: actions/upload-pages-artifact@v1.0.5
-        with:
-          path: "docs/build"
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
