Try fix documenter trigger on tag creation

--- a/.github/workflows/Documenter.yml
+++ b/.github/workflows/Documenter.yml
@@ -1,8 +1,9 @@
 name: Documenter
 on:
   push:
-    branches: [master]
-    tags: [v*]
+    branches:
+      - master
+    tags: '*'
   pull_request:
   workflow_dispatch:
 
