--- a/Project.toml
+++ b/Project.toml
@@ -28,6 +28,6 @@ FiniteDifferences = "0.12"
 GraphMakie = "0.5"
 Graphs = "1.6"
 ImmutableArrays = "1.0.1"
-Makie = "0.19.0 - 0.19.6"
+Makie = "0.19"
 Memoize = "0.4"
 julia = "1.9"
