--- a/.github/workflows/Documenter.yml
+++ b/.github/workflows/Documenter.yml
@@ -27,6 +27,7 @@ jobs:
         run: |
           using Pkg
           pkg"registry add https://github.com/bsc-quantic/Registry.git"
+          pkg"registry add General"
         shell: julia {0}
       - uses: julia-actions/julia-docdeploy@v1
         env:
