--- a/Project.toml
+++ b/Project.toml
@@ -10,7 +10,9 @@ DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 GraphMakie = "1ecd5474-83a3-4783-bb4f-06765db800d2"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 ImmutableArrays = "667c17eb-ab9b-4487-935f-1c621bb82497"
+KaHyPar = "2a6221f6-aa48-11e9-3542-2d9e0ef01880"
 Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [weakdeps]
 ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
