--- a/test/Project.toml
+++ b/test/Project.toml
@@ -3,3 +3,4 @@ CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NetworkLayout = "46757867-2c16-5918-afeb-47bfcb05e46a"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+TensorOperations = "6aa20fa7-93e2-5fca-9bc0-fbd0db3c71a2"
