--- a/Project.toml
+++ b/Project.toml
@@ -30,6 +30,7 @@ DataStructures = "0.18"
 FiniteDifferences = "0.12"
 GraphMakie = "0.5"
 Graphs = "1.6"
+KaHyPar = "0.3"
 Makie = "0.19"
 Memoize = "0.4"
 julia = "1.9"
