--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.6.2"
 [deps]
 AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
+Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 KaHyPar = "2a6221f6-aa48-11e9-3542-2d9e0ef01880"
@@ -29,11 +30,13 @@ EinExprsMakieExt = "Makie"
 [compat]
 AbstractTrees = "0.4"
 Combinatorics = "1.0"
+Compat = "4"
 DataStructures = "0.18"
 FiniteDifferences = "0.12"
 GraphMakie = "0.5"
 Graphs = "1.6"
 KaHyPar = "0.3.1"
 Makie = "0.19"
+PackageExtensionCompat = "1"
 Suppressor = "0.2"
 julia = "1.6"
