--- a/Project.toml
+++ b/Project.toml
@@ -35,5 +35,6 @@ GraphMakie = "0.5"
 Graphs = "1.6"
 KaHyPar = "0.3.1"
 Makie = "0.19"
+PackageExtensionCompat = "1"
 Suppressor = "0.2"
 julia = "1.6"
