--- a/Project.toml
+++ b/Project.toml
@@ -38,7 +38,7 @@ FiniteDifferences = "0.12"
 GraphMakie = "0.5"
 Graphs = "1.6"
 KaHyPar = "0.3.1"
-Makie = "0.19"
+Makie = "0.19, 0.21"
 PackageExtensionCompat = "1"
 Suppressor = "0.2"
 julia = "1.6"
