Fix title in paper

--- a/paper/paper.yml
+++ b/paper/paper.yml
@@ -1,4 +1,4 @@
-title: "\texttt{EinExprs.jl}: Contraction Paths as Symbolic Expressions"
+title: "EinExprs.jl: Contraction Paths as Symbolic Expressions"
 keywords:
   - Julia
   - Tensor Networks
