--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.6.8"
 
 [deps]
 AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
+CliqueTrees = "60701a23-6482-424a-84db-faee86b9b1f8"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
@@ -31,6 +32,7 @@ EinExprsMakieExt = "Makie"
 [compat]
 AbstractTrees = "0.4"
 ChainRulesCore = "1"
+CliqueTrees = "1.5.0"
 Combinatorics = "1.0"
 Compat = "4"
 DataStructures = "0.18"
@@ -40,6 +42,7 @@ Graphs = "1.6"
 KaHyPar = "0.3.1"
 Makie = "0.19, 0.20, 0.21, 0.22"
 PackageExtensionCompat = "1"
+SparseArrays = "1.11.0"
 Suppressor = "0.2"
 julia = "1.6"
 
