--- a/benchmark/Project.toml
+++ b/benchmark/Project.toml
@@ -2,5 +2,6 @@
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 CliqueTrees = "60701a23-6482-424a-84db-faee86b9b1f8"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 KaHyPar = "2a6221f6-aa48-11e9-3542-2d9e0ef01880"
-TreeWidthSolver = "7d267fc5-9ace-409f-a54c-cd2374872a55"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
