CompatHelper: bump compat for Makie in [weakdeps] to 0.23, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -40,7 +40,7 @@ FiniteDifferences = "0.12"
 GraphMakie = "0.5"
 Graphs = "1.6"
 KaHyPar = "0.3.1"
-Makie = "0.19, 0.20, 0.21, 0.22"
+Makie = "0.19, 0.20, 0.21, 0.22, 0.23"
 PackageExtensionCompat = "1"
 SparseArrays = "1.10.0"
 Suppressor = "0.2"
