--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,9 +1,11 @@
 [deps]
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
+CliqueTrees = "60701a23-6482-424a-84db-faee86b9b1f8"
 Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
 GraphMakie = "1ecd5474-83a3-4783-bb4f-06765db800d2"
 KaHyPar = "2a6221f6-aa48-11e9-3542-2d9e0ef01880"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Metis = "2679e427-3c69-5b7f-982b-ece356f1e94b"
 NetworkLayout = "46757867-2c16-5918-afeb-47bfcb05e46a"
 Tenet = "85d41934-b9cd-44e1-8730-56d86f15f3ec"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
