--- a/Project.toml
+++ b/Project.toml
@@ -37,7 +37,7 @@ DataStructures = "0.18"
 FiniteDifferences = "0.12"
 GraphMakie = "0.5"
 Graphs = "1.6"
-Makie = "0.19, 0.20, 0.21, 0.22, 0.23"
+Makie = "0.19, 0.20, 0.21, 0.22, 0.23, 0.24"
 PackageExtensionCompat = "1"
 SparseArrays = "1.10.0"
 Suppressor = "0.2"
