--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ CliqueTrees = "60701a23-6482-424a-84db-faee86b9b1f8"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+DelegatorTraits = "d83dbd90-3e00-4b33-84f1-398adcf3b35e"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 PackageExtensionCompat = "65ce6f38-6b18-4e1d-a461-8949797d7930"
@@ -34,6 +35,7 @@ CliqueTrees = "1.5.1"
 Combinatorics = "1.0"
 Compat = "4"
 DataStructures = "0.18"
+DelegatorTraits = "0.1.2"
 FiniteDifferences = "0.12"
 GraphMakie = "0.5"
 Graphs = "1.6"
