CompatHelper: bump compat for GraphMakie in [weakdeps] to 0.6, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -32,7 +32,7 @@ CliqueTrees = "1.5.1"
 Combinatorics = "1.0"
 DataStructures = "0.18"
 FiniteDifferences = "0.12"
-GraphMakie = "0.5"
+GraphMakie = "0.5, 0.6"
 Graphs = "1.6"
 Makie = "0.19, 0.20, 0.21, 0.22, 0.23, 0.24"
 SparseArrays = "1.10.0"
