--- a/Project.toml
+++ b/Project.toml
@@ -30,7 +30,7 @@ AbstractTrees = "0.4"
 ChainRulesCore = "1"
 CliqueTrees = "1.5.1"
 Combinatorics = "1.0"
-DataStructures = "0.18"
+DataStructures = "0.18, 0.19"
 FiniteDifferences = "0.12"
 GraphMakie = "0.5, 0.6"
 Graphs = "1.6"
